# macroquad_fighter

./: Cargo.toml  README.md
assets/: ai.ron  fighter.ron
examples/: bak_map.json  map.json
src/: fighter.rs  fighter_ai.rs  fighter_wrapper.rs  main.rs
