[package]
name = "fighter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
ron = "0.6.4"
anyhow = "1.0.43"
log = "0.4.14"

env_logger = "0.8.4"
notify = "5.0.0-pre.13"

macroquad = "0.3"
macroquad-tiled = "0.1"
macroquad-platformer = "0.1"